--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
            <ul>
                <li><strong>1955</strong> - Eddie Van Halen born in January 26, 1955 in Nijmegen, Netherlands</li>
 
-               <li><strong>1961</strong> - Van Halen and his older brother, Alex, learned to play the piano as children starting at the age of six.The brothers commuted from Pasadena to San Pedro to study with an elderly man, Stasys (Stanley) Kalvaitis[7] who taught them classical piano. Van Halen and brother Alex hated the commute, but continued as their mother would discipline them if they refused to go.</li>
+               <li><strong>1961</strong> - Van Halen and his older brother, Alex, learned to play the piano as children starting at the age of six.The brothers commuted from Pasadena to San Pedro to study with an elderly man, Stasys (Stanley) Kalvaitis who taught them classical piano. Van Halen and brother Alex hated the commute, but continued as their mother would discipline them if they refused to go.</li>
 
-               <li><strong>1972</strong> - In 1972, Van Halen formed another band, originally called "Genesis." The name was changed to "Mammoth" when Van Halen became aware of the English progressive rock band Genesis. Mammoth consisted of Van Halen on guitar and lead vocals, his brother Alex on drums and bassist Mark Stone.</li>
+               <li><strong>1972</strong> - Van Halen formed another band, originally called "Genesis." The name was changed to "Mammoth" when Van Halen became aware of the English progressive rock band Genesis. Mammoth consisted of Van Halen on guitar and lead vocals, his brother Alex on drums and bassist Mark Stone.</li>
 
                <li><strong>1976</strong> - At one point, the group considered using the name "Rat Salad," after the Black Sabbath song of the same name, before settling on "Van Halen."The band originally began playing cover material, ranging from pop to disco, before settling on original material. In 1976, band supporter Rodney Bingenheimer invited Kiss bassist Gene Simmons to check out a Van Halen show.
                </li>
