--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <h3 id="headline">Here's a time line of Eddie Van Halen's life:</h3>
 
             <ul>
-                <li><strong>1955</strong> - Eddie Van Halen born in January 26, 1955 in Nijmegen, Netherlands</li>
+                <li><strong>1955</strong> - Eddie Van Halen born in January 26, in Nijmegen, Netherlands</li>
 
                 <li><strong>1961</strong> - Van Halen and his older brother, Alex, learned to play the piano as
                     children starting at the age of six.The brothers commuted from Pasadena to San Pedro to study
@@ -61,7 +61,7 @@
                     the United States.
                 </li>
 
-                <li><strong>1982</strong> - In 1982, Van Halen was invited by producer Quincy Jones to contribute
+                <li><strong>1982</strong> - Van Halen was invited by producer Quincy Jones to contribute
                     the guitar solo for Michael Jackson's single "Beat It." Van Halen reportedly declined any
                     payment for the recording, deeming a credit on the album sufficient.
                 </li>
@@ -70,12 +70,6 @@
                     American hard rock band Van Halen, released in 1986 on Warner Bros. Records. It was the first of
                     four albums to be recorded with new lead singer Sammy Hagar, who replaced David Lee Roth.
                 </li>
-
-                <li><strong>1986</strong> - 5150 (pronounced "fifty-one-fifty") is the seventh studio album by
-                    American hard rock band Van Halen, released in 1986 on Warner Bros. Records. It was the first of
-                    four albums to be recorded with new lead singer Sammy Hagar, who replaced David Lee Roth.
-                </li>
-
 
                 <li><strong>1995</strong> - Balance is the tenth studio album by hard rock band Van Halen, released
                     on January 24, 1995 through Warner Bros. Records. The album is the last of the band's four
